DCRProj/force-app/main/default/objects/DCR_Line__c/DCR_Line__c.object-meta.xml
<CustomObject>
    <label>DCR Line</label>
    <nameField>
        <displayFormat>DLI-{000000}</displayFormat>
        <label>DCR Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCR Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>