DCRProj/force-app/main/default/objects/DCR_Line__c/fields/DCR__c.field-meta.xml
<CustomField>
    <fullName>DCR__c</fullName>
    <label>DCR</label>
    <referenceTo>DCR__c</referenceTo>
    <relationshipLabel>DCR Line Items</relationshipLabel>
    <relationshipName>DCR_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>