DCRProj/force-app/main/default/objects/DCR_Line__c/fields/DCRLineStatus__c.field-meta.xml
<CustomField>
    <fullName>DCRLineStatus__c</fullName>
    <label>DCRLineStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>