DCRProj/force-app/main/default/objects/DCR_Line__c/fields/Field_Source__c.field-meta.xml
<CustomField>
    <fullName>Field_Source__c</fullName>
    <label>Field Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>